--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+<link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
+<script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-uni-project</title>
+    <title>Vue.js Uni Peoject</title>
   </head>
   <body>
     <noscript>
