Add search to the People list page; Add Planets list page; Add Starships page; Design improvements

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
 <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Hanalei+Fill" rel="stylesheet">
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Vue.js Uni Peoject</title>
+    <title>Vue.js Uni Project</title>
   </head>
   <body>
     <noscript>
