--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
-<script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Hanalei+Fill" rel="stylesheet">
-<html lang="en">
+  <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Hanalei+Fill" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,9 +12,11 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-uni-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but vue-uni-project doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
