--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
   <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Hanalei+Fill" rel="stylesheet">
+  <link href="https://unpkg.com/nprogress@0.2.0/nprogress.css" rel="stylesheet" />
+  <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <head>
     <meta charset="utf-8">
@@ -19,4 +21,3 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
-<script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
